🚑 fix link color inside buttons for dark mode

--- a/resources/sass/app-dark.scss
+++ b/resources/sass/app-dark.scss
@@ -32,6 +32,10 @@ $dm-body: hsl(224, 10%, 75%);
         color: $dm-trwlBlue;
     }
 
+    a.btn {
+        color: $white;
+    }
+
     .card {
         background-color: $dm-base-5;
     }
